--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 #root,html,body{
   height: 100dvh;
 }
+
+#mainBg{
+  background-image: linear-gradient(to right, #e4afcb 0%, #b8cbb8 0%, #b8cbb8 0%, #e2c58b 30%, #c2ce9c 64%, #7edbdc 100%);
+}
